--- a/www/gsap.html
+++ b/www/gsap.html
@@ -9,8 +9,9 @@
         }
 
         .animationWrapper {
-            width: 950px;
-            height: 710px;
+            /*width: 950px;*/
+            width: 100%;
+            /*height: 710px;*/
             background: #000;
             margin: 0 auto;
             position: relative;
@@ -113,7 +114,7 @@
     </style>
 </head>
 <body>
-<a href="index.html">home</a>
+<a href="index.html">home</a><br/><br/><br/><br/>
 <div class="animationWrapper">
     <hr class="a">
     <hr class="b">
